console,oauth: Fix profile dropdown spacing

--- a/pkg/webui/components/profile-dropdown/profile-dropdown.styl
+++ b/pkg/webui/components/profile-dropdown/profile-dropdown.styl
@@ -32,7 +32,10 @@
 
 .id
   one-liner()
-  margin-right: $cs.s
+  margin-right: $cs.xs
 
 .dropdown
   top: $header-height
+
+  &-icon
+    margin-right: -.4rem
